--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -155,6 +155,7 @@
 
             <button type="submit" class="button">Login</button>
         </form>
+        <h3>Version: {{ app_version }}</h3>
     </div>
 
     <!-- Popup notification -->
